@@ -62,6 +62,7 @@ Revision history for TAP-Parser
     - Any additional libs added to the command line are also added to
       PERL5LIB for the duration of a test run so that any Perl children
       of the test script inherit the same library paths.
+    - Fixed handling of single quoted hash keys in T::P::Y::Reader
       
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
